<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="24dp"
    android:paddingRight="50dp"
    android:orientation="vertical" >

    <Switch
        android:id="@+id/descendingSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_descending"
        android:switchPadding="12dp"
        android:contentDescription="@string/sort_descending"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="120dp">

        <RadioButton
            android:id="@+id/workOrder"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/work_order" />

        <RadioButton
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/status" />

        <RadioButton
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/end_time" />

    </RadioGroup>

</LinearLayout>
